Fix rocketmq latest dep test (#8756)