@@ -25,4 +25,8 @@ tasks.withType<Test>().configureEach {
   jvmArgs("-Dotel.instrumentation.rocketmq-client.experimental-span-attributes=true")
 
   systemProperty("testLatestDeps", findProperty("testLatestDeps") as Boolean)
+
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
 }
